--- a/.github/workflows/check-submodules.yaml
+++ b/.github/workflows/check-submodules.yaml
@@ -9,12 +9,12 @@ jobs:
     steps:
     - name: Checkout this repo
       uses: actions/checkout@v3
-    ## Step only reqired for private submodules
-    - name: Checkout submodule repo
-      uses: actions/checkout@v3
-      with:
-        repository: calmbrown/testaction-submodule
-        path: "calmbrown/testaction-submodule"
+#     ## Step only reqired for private submodules
+#     - name: Checkout submodule repo
+#       uses: actions/checkout@v3
+#       with:
+#         repository: calmbrown/testaction-submodule
+#         path: "calmbrown/testaction-submodule"
     - name: Check Submodule Name
       uses: jtmullen/submodule-branch-check-action@v1
       with:
